# uv-project

./: .gitignore  README.md  main.py  pyproject.toml  readme.md  tasks.json
src/: main.py
src/typer_task.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: conftest.py  test_healthcheck.py
