[project]
name = "typer-task"
version = "0.1.0"
description = "A simple CLI Task Manager built with Typer"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["typer"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
task = "src.main:app"
